added new landing page, main, and connected to app layer

--- a/src/App.css
+++ b/src/App.css
@@ -38,15 +38,15 @@
 }
 
 body {
+  background: white;
+  /* background: rgb(2,0,36);
+  background: linear-gradient(156deg, rgba(2,0,36,1) 33%, rgba(9,9,121,1) 65%, rgba(0,212,255,1) 100%) fixed;
+  background-repeat: no-repeat;
+  background-size: auto; */
+  /* min-width: 1100px; */
+  height: auto;
+  color: black;
   margin: 0;
-  /* background: #161623; */
-  /* background: rgb(2,0,36); */
-  /* background: linear-gradient(156deg, rgba(2,0,36,1) 33%, rgba(9,9,121,1) 65%, rgba(0,212,255,1) 100%) fixed; */
-  /* background-repeat: no-repeat;
-  background-size: auto;
-  height: auto; */
+  padding: 0;
 }
 
-h1 {
-  color: white;
-}
